add new trading pair: ETHEUR

--- a/src/main/resources/api-spec.yaml
+++ b/src/main/resources/api-spec.yaml
@@ -147,6 +147,7 @@ definitions:
     enum: &tradingPair
       - btceur #BTC/EUR
       - bcheur #BCH/EUR
+      - etheur #ETH/EUR
 
   TradingPartnerRating:
     type: "string"
